Try different yaml syntax for cases where merging behaves unexpected

--- a/src/commands/prepare-test.yml
+++ b/src/commands/prepare-test.yml
@@ -7,4 +7,5 @@ steps:
       command: mkdir -pv ./.orbspace/test/orbs
   - run:
       name: copy orb over to be able to use as local orb in test config
-      command: cp << parameters.orb-path >> ./.orbspace/test/orbs/<< parameters.orb-name >>.yml
+      command: |
+        cp << parameters.orb-path >> ./.orbspace/test/orbs/<< parameters.orb-name >>.yml
