--- a/src/jobs/publish.yml
+++ b/src/jobs/publish.yml
@@ -89,8 +89,4 @@ steps:
       condition: << parameters.store-artifact >>
       steps:
         - store_artifacts:
-            path: << parameters.destination-file >>
-        - store_artifacts:
-            path: .parameters
-        - store_artifacts:
-            path: src
+            path: .orbspace
