--- a/src/jobs/check.yml
+++ b/src/jobs/check.yml
@@ -2,6 +2,7 @@ description: Pack and validate the orb only.
 
 executor:
   name: default
+  alpine_version: << parameters.alpine_version >>
 
 steps:
   - checkout
