Setup Docker in orb

--- a/src/jobs/check.yml
+++ b/src/jobs/check.yml
@@ -6,6 +6,7 @@ executor:
 
 steps:
   - checkout
+  - setup_remote_docker
   - when:
       condition: << parameters.patch-parameters >>
       steps:
