--- a/src/commands/read-root-elements.yml
+++ b/src/commands/read-root-elements.yml
@@ -7,7 +7,11 @@ parameters:
   template-path:
     description: the file path of the yaml file
     type: string
+  child:
+    description: the yaml path to a child to filter from the template
+    type: string
+    default: ""
 steps:
   - envorb/cmd:
       variable: << parameters.variable >>
-      cmd: cat << parameters.template-path >> | grep -Po '^[a-zA-Z][0-9a-zA-Z_\-]*'
+      cmd: 'cat << parameters.template-path >><<# parameters.child >> | yq r - << parameters.child >><</ parameters.child>> | grep -Po "^[a-zA-Z][0-9a-zA-Z_\-]*"'
