--- a/src/commands/test.yml
+++ b/src/commands/test.yml
@@ -26,8 +26,15 @@ steps:
   - run:
       name: compile test config << parameters.test-config >>
       command: circleci config process ./.orbspace/test-case.src.yml > ./.orbspace/test-case.yml
+  - read-root-elements:
+      variable: ORB_TEST_JOBS
+      template-path: ./.orbspace/test-case.yml
+      child: jobs
   - run:
       name: run test jobs of << parameters.test-config >> locally
       command: |
-        <<# parameters.expect-fail >>! <</ parameters.expect-fail>>circleci local execute -c ./.orbspace/test-case.yml | tee local_build_output.txt /dev/stderr | tail -n 1 | grep "Success"
+        source /usr/local/bin/envload
+        for job in $ORB_TEST_JOBS; do
+          <<# parameters.expect-fail >>! <</ parameters.expect-fail>>circleci local execute --job $job -c ./.orbspace/test-case.yml | tee local_build_output.txt /dev/stderr | tail -n 1 | grep "Success"
+        done
   - << parameters.test-verification >>
