Test migration mechanism

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  orbtools: gofunky/orbtools@dev:552
+  orbtools: gofunky/orbtools@dev:564
   envorb: gofunky/envorb@0.3.9
   docker: gofunky/docker@0.1.2
 
@@ -48,7 +48,7 @@ orbtools_job: &orbtools_job
 
 orb_tests: &orb_tests
   success-config: test/success-test.yml
-  fail-config: test/invalid-test.yml
+  #fail-config: test/invalid-test.yml
 
 workflows:
   build_latest_image:
@@ -108,7 +108,7 @@ workflows:
       - orbtools/publish:
           context: orb-tools
           version: "dev:${CIRCLE_BUILD_NUM}"
-          <<: [*master_filter, *use_alpine_version]
+          <<: [*master_filter, *use_alpine_version, *orb_tests]
 
   release_orb:
     jobs:
