--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ orb_tests: &orb_tests
 jobs:
   whereis:
     docker:
-      - image: gofunky/orbtools
+      - image: ubuntu:latest
     steps:
       - setup_remote_docker
       - run: whereis docker
