--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,17 @@ jobs:
       - image: gofunky/orbtools
     steps:
       - setup_remote_docker
-      - run: whereis docker
       - run: docker run --rm alpine
       - store_artifacts:
           path: /root/.docker
+      - store_artifacts:
+          path: .docker
+      - store_artifacts:
+          path: /.docker
+      - store_artifacts:
+          path: /home/.docker
+      - store_artifacts:
+          path: /var/.docker
 
 workflows:
   build_latest_image:
