--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,17 @@ jobs:
       - image: gofunky/orbtools
     steps:
       - setup_remote_docker
-      - run: docker run --rm alpine
+      - run: |
+          docker create --volume /test --name orbtools alpine
+          docker cp $DOCKER_CERT_PATH orbtools:/test/docker-cert
+          docker run --volumes-from orbtools --interactive --tty --rm docker \
+            --env DOCKER_CERT_PATH='/test/docker-cert' \
+            --env DOCKER_HOST="$DOCKER_HOST" \
+            --env DOCKER_MACHINE_NAME="$DOCKER_MACHINE_NAME" \
+            --env DOCKER_TLS_VERIFY="$DOCKER_TLS_VERIFY" \
+            --env NO_PROXY="$NO_PROXY" \
+            --workdir /test \
+            docker run --rm alpine
       - store_artifacts:
           path: /root/.docker
       - store_artifacts:
