--- a/src/commands/test.yml
+++ b/src/commands/test.yml
@@ -50,9 +50,8 @@ steps:
             --env NO_PROXY \
             --env job \
             circleci/picard \
-            sh -vc "docker version && \
-            docker run --rm alpine echo test && \
-            circleci build --job $job" | tee local_build_output.txt /dev/stderr | tail -n 1 | grep "Success" || true
+            circleci execute --verbose --job $job \
+            | tee local_build_output.txt /dev/stderr | tail -n 1 | grep "Success" || true
         done
         docker container rm orbtools
   - << parameters.test-verification >>
