--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,386 +1,13 @@
 version: 2.1
 
-alpine_params: &alpine_params
-  alpine_version:
-    description: >
-      Alpine version
-    type: string
-    default: ""
-
-alpine_args: &alpine_args
-  alpine_version: << parameters.alpine_version >>
-
-executors:
-  default:
-    parameters:
-      <<: *alpine_params
-    docker:
-      - image: gofunky/orbtools:alpine<< parameters.alpine_version >>
+description: >
+  This version of the orb tools provides extended functions to the upstream version.
+  First, you can use environment variables from the envorb, e.g., for version tagging.
+  Second, you can use placeholders in your yaml files that are patched by environment variables.
+  Third, you can reduce the overhead of your orbs' parameters by using cross-cutting paramters.
+  Simply define your parameters in your +parameters.yml file and they are propagated to the files where they are
+  referenced during the build.
 
 orbs:
   envorb: gofunky/envorb@0.3.9
-
-commands:
-  pack:
-    description: >
-      *Experimental*
-      Uses the CLI to pack an orb file structure
-      into a single orb yml.
-    parameters:
-      source:
-        description: "Path to the root folder of an unpacked orb."
-        type: string
-      destination:
-        description: "Path including the filename to output the packed orb."
-        type: string
-    steps:
-      - run:
-          name: "Ensure destination path"
-          command: |
-            mkdir -pv $(dirname << parameters.destination >>)
-      - run:
-          name: "Pack << parameters.source>> to << parameters.destination >>"
-          command: |
-            circleci config pack << parameters.source >> > << parameters.destination >>
-
-  validate:
-    description: >
-      Users the CLI to validate a given orb yml
-    parameters:
-      orb-path:
-        description: "Path to the orb file to be validated."
-        type: string
-    steps:
-      - run:
-          name: "Validate whether this is a well-formed orb."
-          command: circleci orb validate << parameters.orb-path >>
-
-  increment:
-    description: >
-      Uses the CLI to increment the version of an orb in the registry.
-      If the orb does not have a version yet it starts at 0.0.0
-    parameters:
-      orb-path:
-        description: "Path to an orb file."
-        type: string
-      orb-ref:
-        description: "A versionless orb-ref in the form <namespace>/<orb-name>"
-        type: string
-      segment:
-        description: "The semver segment to increment 'major' or 'minor' or 'patch'"
-        type: enum
-        enum: ["major", "minor", "patch"]
-      token-variable:
-        description: >
-          The env var containing your token. Pass this as a literal string such
-          as `$ORB_PUBLISHING_TOKEN`. Do not paste the actual token into your
-          configuration. If omitted it's assumed the CLI has already been setup
-          with a valid token.
-        type: string
-        default: ""
-    steps:
-      - run:
-          name: >
-            Increment << parameters.segment >> segment of orb at << parameters.orb-path >>
-            NOTE: this currently assumes you are publishing to the registry at circleci.com
-          command: >
-            circleci orb publish increment
-            << parameters.orb-path >>
-            << parameters.orb-ref >>
-            << parameters.segment >>
-            <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
-  publish:
-    description: >
-      Uses the CLI to publish an orb to the registry.
-    parameters:
-      orb-path:
-        description: "Path to an orb file."
-        type: string
-      orb-ref:
-        description: >
-          A fully-qualified reference to an orb. This takes the form <namespace>/<orb-name>@<version>
-          NOTE: To publish a dev version prefix the version with 'dev:' like this: <namespace>/<orb-name>@dev:<label>
-        type: string
-      token-variable:
-        description: >
-          The env var containing your token. Pass this as a literal string such
-          as `$ORB_PUBLISHING_TOKEN`. Do not paste the actual token into your
-          configuration. If omitted it's assumed the CLI has already been setup
-          with a valid token.
-        type: string
-        default: ""
-    steps:
-      - run:
-          name: >
-            Publish orb at << parameters.orb-path >> to << parameters.orb-ref >>
-            NOTE: this currently assumes you are publishing to the registry at circleci.com
-          command: >
-            circleci orb publish << parameters.orb-path >> << parameters.orb-ref >>
-            <<# parameters.token-variable >>--token << parameters.token-variable >> <</ parameters.token-variable >>
-
-jobs:
-  pack:
-    description: >
-      *Experimental*
-      Pack the contents of an orb for publishing.
-    parameters:
-      <<: [*alpine_params]
-      source-dir:
-        description: >
-          Path to the root of the orb source directory to be packed. (ie: my-orb/src/)
-        type: string
-      destination-orb-path:
-        description: >
-          Path including filename of where the packed orb will be written.
-        type: string
-      validate:
-        description: >
-          Boolean for whether or not to do validation on the orb. Default
-          is true.
-        type: boolean
-        default: true
-      checkout:
-        description: >
-          Boolean for whether or not to checkout as a first step. Default is true.
-        type: boolean
-        default: true
-      attach-workspace:
-        description: >
-          Boolean for whether or not to attach to an existing workspace. Default
-          is false.
-        type: boolean
-        default: false
-      workspace-root:
-        description: >
-          Workspace root path that is either an absolute path or a path relative
-          to the working directory. Defaults to '.' (the working directory)
-        type: string
-        default: "."
-      workspace-path:
-        description: >
-          Path of the workspace to persist to relative to workspace-root.
-          Typically this is the same as the destination-orb-path. If the default
-          value of blank is provided then this job will not persist to a
-          workspace.
-        type: string
-        default: ""
-      artifact-path:
-        description: >
-          Path to directory that should be saved as a job artifact. If the
-          default value of blank is provided then this job will not save any
-          artifacts.
-        type: string
-        default: ""
-    executor:
-      name: default
-      <<: *alpine_args
-    steps:
-      # Setup
-      - when:
-          condition: << parameters.checkout >>
-          steps:
-            - checkout
-      - when:
-          condition: << parameters.attach-workspace >>
-          steps:
-            - attach_workspace:
-                at: << parameters.workspace-root >>
-      # Pack
-      - pack:
-          source: << parameters.source-dir >>
-          destination: << parameters.destination-orb-path >>
-      # Validate
-      - when:
-          condition: << parameters.validate >>
-          steps:
-            - validate:
-                orb-path: << parameters.destination-orb-path >>
-      # Save
-      - when:
-          condition: << parameters.workspace-path >>
-          steps:
-            - persist_to_workspace:
-                root: << parameters.workspace-root >>
-                paths:
-                  - << parameters.workspace-path >>
-      - when:
-          condition: << parameters.artifact-path >>
-          steps:
-            - store_artifacts:
-                path: << parameters.artifact-path >>
-
-
-  increment:
-    description: >
-      Uses the CLI to increment the version of an orb in the registry.
-      If the orb does not have a version yet it starts at 0.0.0
-    executor:
-      name: default
-      <<: *alpine_args
-    parameters:
-      <<: [*alpine_params]
-      orb-path:
-        description: Path to an orb file.
-        type: string
-      orb-ref:
-        description: A versionless orb-ref in the form <namespace>/<orb-name>
-        type: string
-      segment:
-        description: >
-          The semver segment to increment 'major' or 'minor' or 'patch'
-        type: enum
-        enum: ["major", "minor", "patch"]
-      publish-token-variable:
-        description: >
-          The env var containing your token. Pass this as a literal string such
-          as `$ORB_PUBLISHING_TOKEN`. Do not paste the actual token into your
-          configuration. If omitted it's assumed the CLI has already been setup
-          with a valid token.
-        type: string
-        default: ""
-      validate:
-        description: >
-          Boolean for whether or not to do validation on the orb. Default
-          is true.
-        type: boolean
-        default: true
-      checkout:
-        description: >
-          Boolean for whether or not to checkout as a first step. Default is true.
-        type: boolean
-        default: true
-      attach-workspace:
-        description: >
-          Boolean for whether or not to attach to an existing workspace. Default
-          is false.
-        type: boolean
-        default: false
-      workspace-root:
-        description: >
-          Workspace root path that is either an absolute path or a path relative
-          to the working directory. Defaults to '.' (the working directory)
-        type: string
-        default: "."
-    steps:
-      # Setup
-      - when:
-          condition: << parameters.checkout >>
-          steps:
-            - checkout
-      - when:
-          condition: << parameters.attach-workspace >>
-          steps:
-            - attach_workspace:
-                at: << parameters.workspace-root >>
-      # Validate
-      - when:
-          condition: << parameters.validate >>
-          steps:
-            - validate:
-                orb-path: << parameters.orb-path >>
-      # Increment
-      - increment:
-          orb-path: << parameters.orb-path >>
-          orb-ref: << parameters.orb-ref >>
-          segment: << parameters.segment >>
-          token-variable: << parameters.publish-token-variable >>
-
-  publish:
-    executor:
-      name: default
-      <<: *alpine_args
-    parameters:
-      <<: [*alpine_params]
-      orb-path:
-        description: Path of the orb file to publish.
-        type: string
-      orb-ref:
-        description: A full orb-ref in the form of <namespace>/<orbname>@<semver>
-        type: string
-      publish-token-variable:
-        description: >
-          The env var containing your publish token. Pass this as a literal string such
-          as `$ORB_PUBLISHING_TOKEN`. DO NOT paste the actual token into your
-          configuration. If omitted it's assumed the CLI has already been setup
-          with a valid token.
-        type: string
-        default: ""
-      validate:
-        description: >
-          Boolean for whether or not to do validation on the orb. Default
-          is true.
-        type: boolean
-        default: true
-      checkout:
-        description: >
-          Boolean for whether or not to checkout as a first step. Default is true.
-        type: boolean
-        default: true
-      attach-workspace:
-        description: >
-          Boolean for whether or not to attach to an existing workspace. Default
-          is false.
-        type: boolean
-        default: false
-      workspace-root:
-        description: >
-          Workspace root path that is either an absolute path or a path relative
-          to the working directory. Defaults to '.' (the working directory)
-        type: string
-        default: "."
-    steps:
-      # Setup
-      - when:
-          condition: << parameters.checkout >>
-          steps:
-            - checkout
-      - when:
-          condition: << parameters.attach-workspace >>
-          steps:
-            - attach_workspace:
-                at: << parameters.workspace-root >>
-      # Validate
-      - when:
-          condition: << parameters.validate >>
-          steps:
-            - validate:
-                orb-path: << parameters.orb-path >>
-      # Publish
-      - publish:
-          orb-path: << parameters.orb-path >>
-          orb-ref: << parameters.orb-ref >>
-          token-variable: << parameters.publish-token-variable >>
-
-  check:
-    description: Pack and validate the orb only.
-    parameters:
-      <<: [*alpine_params]
-      source-dir:
-        description: >
-          Path to the root of the orb source directory to be packed.
-          By default, `src/` is assumed.
-        type: string
-        default: src/
-      destination-file:
-        description: Path including filename of where the packed orb will be written.
-        type: string
-        default: ./.orbspace/orb.yml
-      store-artifact:
-        description: If enabled, the destination-file will be stored as artifact.
-        type: boolean
-        default: true
-    executor:
-      name: default
-      <<: *alpine_args
-    steps:
-      - checkout
-      - pack:
-          source: << parameters.source-dir >>
-          destination: << parameters.destination-file >>
-      - validate:
-          orb-path: << parameters.destination-file >>
-      - when:
-          condition: << parameters.store-artifact >>
-          steps:
-            - store_artifacts:
-                path: << parameters.destination-file >>
+  orb-tools: circleci/orb-tools@2.0.2
