--- a/src/commands/test.yml
+++ b/src/commands/test.yml
@@ -35,8 +35,8 @@ steps:
       command: |
         source /usr/local/bin/envload
         docker create --volume /test --name orbtools alpine
+        docker cp ./.orbspace orbtools:/test/
         docker cp $DOCKER_CERT_PATH orbtools:/test/docker-cert
-        docker cp ./.orbspace orbtools:/test
         docker cp ./.orbspace/test-case.yml orbtools:/test/circle.yml
         for job in $ORB_TEST_JOBS; do
           echo "Executing test job '$job'"
@@ -44,13 +44,18 @@ steps:
           <<# parameters.expect-fail >>! <</ parameters.expect-fail>>docker run \
             --volumes-from orbtools --interactive --tty --rm --workdir /test \
             --env DOCKER_CERT_PATH='/test/docker-cert' \
-            --env DOCKER_HOST \
-            --env DOCKER_MACHINE_NAME \
-            --env DOCKER_TLS_VERIFY \
-            --env NO_PROXY \
+            --env DOCKER_HOST="$DOCKER_HOST" \
+            --env DOCKER_MACHINE_NAME="$DOCKER_MACHINE_NAME" \
+            --env DOCKER_TLS_VERIFY="$DOCKER_TLS_VERIFY" \
+            --env NO_PROXY="$NO_PROXY" \
             --env job \
             circleci/picard \
             circleci execute --verbose --job $job \
+              --env DOCKER_CERT_PATH='docker-cert' \
+              --env DOCKER_HOST="$DOCKER_HOST" \
+              --env DOCKER_MACHINE_NAME="$DOCKER_MACHINE_NAME" \
+              --env DOCKER_TLS_VERIFY="$DOCKER_TLS_VERIFY" \
+              --env NO_PROXY="$NO_PROXY" \
             | tee local_build_output.txt /dev/stderr | tail -n 1 | grep "Success" || true
         done
         docker container rm orbtools
